...
            }}
          >
            <Stack.Screen 
              name="Login" 
              component={LoginScreen} 
              options={{ 
                title: 'Naturinex',
                headerShown: false 
              }}
            />
            <Stack.Screen 
              name="Onboarding" 
              component={OnboardingScreen} 
              options={{ 
                title: 'Welcome to Naturinex',
                headerShown: false 
              }}
            />
            <Stack.Screen 
              name="Home" 
              component={HomeScreen} 
...
